# diffsquare

./: CHANGELOG.md  Cargo.toml  README.md
src/: factor.rs  legendre.rs  lib.rs  main.rs  sqrt.rs  utils.rs
tests/: factor.rs  is_probably_square.rs  legendre.rs  sqr_perf.rs
