[package]
name = "diffsquare"
version = "0.2.3"
edition = "2021"
authors = ["Abhrankan Chakrabarti <abhrankan@gmail.com>"]
description = "Fast and efficient Fermat factorization CLI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Abhrankan-Chakrabarti/diffsquare"
homepage = "https://abhrankan-chakrabarti.github.io/diffsquare"
keywords = ["factorization", "fermat", "cli", "number-theory", "math"]
categories = ["command-line-utilities", "cryptography", "science"]
exclude = [".github/*", "target/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.98"
malachite = { version = "0.6.0", default-features = false, features = ["malachite-nz", "naturals_and_integers"] }

[package.metadata]
documentation = "https://docs.rs/diffsquare"
